--- a/css/sass/Base/_typography.scss
+++ b/css/sass/Base/_typography.scss
@@ -23,6 +23,10 @@
     src: url("./fonts/Soozle.ttf");
 }
 
+@font-face{
+    font-family: "Kaushanscript";
+    src: url("./fonts/Kaushanscript-regular.ttf");
+}
 
 html{    
     font-size: .625em; /* fallback IE8+ */
