--- a/css/sass/Utils/_variables.scss
+++ b/css/sass/Utils/_variables.scss
@@ -13,9 +13,22 @@ $cd-menu2-a-txt: #c67412;
 $cd-menu2-b-txt: #a56799;
 $cd-menu2-c-txt: #6e4ccc;
 
+
 // Variables Colors Menu3
 $cd-menu3-bg: #edefef;
 $cd-menu3-txt: #181919;
+$cd-menu3-bar : #0228dd;
+$cd-menu3-bar1 : #0e32de;
+$cd-menu3-bar2 : #0b73f3;
+$cd-menu3-bar3 : #4eaff7;
+
+// Variables Colors Menu4
+$cd-menu4-bg: #fdfffd;
+$cd-menu4-txt: #4a4a4a;
+$cd-menu4-bar1 : hsl(118, 43%, 40%);
+$cd-menu4-bar2: hsl(92, 96%, 90%);
+
+
 
 
 
