--- a/view/mentions_legales.html
+++ b/view/mentions_legales.html
@@ -20,15 +20,16 @@
 
     <body>        
         <header>
-            <a href="..\index.html"><h1>ohmyfood</h1></a>        
+            <a href="..\index.html">
+                <h1>ohmyfood</h1>
+            </a>        
         </header>   
 
-        <main>
-            <p>BLA BLA BLA</p>
-
-            <a class="btn" href='..\index.html'>Retour</a>
-            
+        <main class="block_center padding_top">
+            <p class="margin_null in-work">Bla Bla Bla<span>.</span><span>.</span><span>.</span></p>
         </main>
+
+        <a class="btn" href='..\index.html'>Retour</a>
 
         <footer>
             <a class="btn_foot" href="view/mentions_legales.html">Mentions légales</a>
