--- a/view/menu_3b.html
+++ b/view/menu_3b.html
@@ -22,21 +22,23 @@
 
     <body>        
         <header class="header_top">
-            <a href="../index.html"><h1>ohmyfood</h1></a>        
+            <a href="../index.html">
+                <h1>ohmyfood</h1>
+            </a>        
         </header>
         <h2>Le délice des papilles</h2>
-        <main class="block_center width_menu color_menu--bg3  style_menu3">  
-            <article class="style_menu3-b">
-                <h3 class="margin_null">Le délice des papilles</h3>       
-                <section class="block_center">
+        <main class="block_center width_menu color_menu--bg3  style_menu3 padding_bottom">  
+            <article>
+                <h3 class="margin_null padding_top style_title-three">Le délice des papilles</h3>       
+                <section class="block_center style_menu3-b">
                     <header class="flexbox block_center">
                         <div class="flex_center">
                             <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
                             <h4 class="hvr-underline-from-left">Pour bien commencer</h4>
-                            <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
+                            <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
                         </div>
                     </header>
-                    <ul class="flex_column">
+                    <ul class="flex_column flex_center">
                         <li class="flex_space-between">
                             <p>Tartare de thon assaisonné au yuzu</p>
                             <p>55€</p>
@@ -51,15 +53,15 @@
                         </li>
                     </ul>                   
                 </section>
-                <section class="block_center">
+                <section class="block_center style_menu3-b">
                     <header class="flexbox block_center">
                         <div class="flex_center">
                             <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
                             <h4 class="hvr-underline-from-left">Pour bien continuer</h4>
-                            <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
+                            <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
                         </div>
                     </header>
-                    <ul class="flex_column">
+                    <ul class="flex_column flex_center">
                         <li class="flex_space-between">
                             <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
                             <p>110€</p>
@@ -74,15 +76,15 @@
                         </li>                                
                     </ul>     
                 </section>                         
-                <section class="block_center">
+                <section class="block_center style_menu3-b">
                     <header class="flexbox block_center">
                         <div class="flex_center">
                             <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
                             <h4 class="hvr-underline-from-left">Pour bien terminer</h4>
-                            <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
+                            <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
                         </div>
                     </header>
-                    <ul class="flex_column">
+                    <ul class="flex_column flex_center">
                         <li class="flex_space-between">
                             <p>Farandole de desserts du chef</p>
                             <p>55€</p>
