--- a/view/menu_4b.html
+++ b/view/menu_4b.html
@@ -22,98 +22,87 @@
 
     <body>        
         <header class="header_top">
-            <a href="../index.html"><h1>ohmyfood</h1></a>        
-        </header>  
-
+            <a href="../index.html">
+                <h1>ohmyfood</h1>
+            </a>        
+        </header>
         <h2>La palette du goût</h2> 
+        <main class="block_center width_menu color_menu--bg4  style_menu4 padding_bottom">
+            <article>
+                <h3 class="margin_null style_title-four">La palette du goût</h3>
+                <section class="block_center">
+                    <header class="flexbox block_center">
+                        <div class="flex_center">
+                            <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
+                            <h4 class="hvr-underline-from-left">Esquisse</h4>
+                            <img class="bar_menu rotate-bar_menu padding_left" src="../img/bar_menu4.png" alt="" />
+                        </div>
+                    </header>
+                    <ul class="flex_column flex_center">
+                        <li class="flex_space-between">
+                            <p>Fricassée d'escargot au piment d'espelette</p>
+                            <p>60€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
+                            <p>55€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
+                            <p>65€</p>
+                        </li>                  
+                    </ul>
+                </section>
 
-        <main class="block_center width_menu color_menu--bg1  style_menu1"> 
-            <div class="txt_center padding_top"><i class="note--color note--top fas fa-music"></i></div> 
-                <h2 class="margin_null">La palette du goût</h2>
-             
-                <ul>
-                    <li>
-                        <section class="block_center">
-                            <header class="flexbox block_center">
-                                <div class="flex_center">
-                                    <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Esquisse</h3>
-                                    <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
-                                </div>
-                            </header>
-                            <div class="flex_column">
-                                <div class="flex_space-between">
-                                    <p>Fricassée d'escargot au piment d'espelette</p>
-                                    <p>60€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
-                                    <p>55€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
-                                    <p>65€</p>
-                                </div>                  
-                        </section>
-                    </li>                
-                    <li>
-                        <section class="block_center">
-                            <header class="flexbox block_center">
-                                <div class="flex_center">
-                                    <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Oeuvre de maître 
-                                    </h3>
-                                    <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
-                                </div>
-                            </header>
+                <section class="block_center">
+                    <header class="flexbox block_center">
+                        <div class="flex_center">
+                            <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
+                            <h4 class="hvr-underline-from-left">Oeuvre de maître</h4>
+                            <img class="bar_menu rotate-bar_menu padding_left" src="../img/bar_menu4.png" alt="" />
+                        </div>
+                    </header>
 
-                            <div class="flex_column">
-                                <div class="flex_space-between">
-                                    <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
-                                    <p>70€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p>
-                                    <p>85€</p> 
-                                </div>                               
-                                <div class="flex_space-between">
-                                    <p>Filet de Turbot aux agrumes</p>
-                                    <p>125€</p>
-                                </div>                                
-                            </div>     
-                        </section>                        
-                    </li>      
-                    <li> 
-                        <section class="block_center">
-                            <header class="flexbox block_center">
-                                <div class="flex_center">
-                                    <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Au sommet de l'art</h3>
-                                    <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
-                                </div>
-                            </header>
+                    <ul class="flex_column flex_center">
+                        <li class="flex_space-between">
+                            <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
+                            <p>70€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p>
+                            <p>85€</p> 
+                        </li>                               
+                        <li class="flex_space-between">
+                            <p>Filet de Turbot aux agrumes</p>
+                            <p>125€</p>
+                        </li>                                
+                    </ul>     
+                </section>  
 
-                            <div class="flex_column">
-                                <div class="flex_space-between">
-                                    <p>Paris-Brest revisité</p>
-                                    <p>55€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Macaron au chocolat d'exception et glace a la vanille de Madagascar</p>
-                                    <p>65€</p> 
-                                </div>                               
-                                <div class="flex_space-between">
-                                    <p>Mousse au chocolat au piment d'espelette et à la truffe noire</p>
-                                    <p>60€</p>
-                                </div>                                
-                            </div>     
+                <section class="block_center">
+                    <header class="flexbox block_center">
+                        <div class="flex_center">
+                            <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
+                            <h4 class="hvr-underline-from-left">Au sommet de l'art</h4>
+                            <img class="bar_menu rotate-bar_menu padding_left" src="../img/bar_menu4.png" alt="" />
+                        </div>
+                    </header>
 
-                        </section>
-                    </li>                         
-                </ul>
-            
-                <div class="txt_center padding_top"><h4><i class="note--color note--bottom padding_right fas fa-music"></i>La palette du goût</h4></div>        
-            
+                    <ul class="flex_column flex_center">
+                        <li class="flex_space-between">
+                            <p>Paris-Brest revisité</p>
+                            <p>55€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Macaron au chocolat d'exception et glace a la vanille de Madagascar</p>
+                            <p>65€</p> 
+                        </li>                               
+                        <li class="flex_space-between">
+                            <p>Mousse au chocolat au piment d'espelette et à la truffe noire</p>
+                            <p>60€</p>
+                        </li>                                
+                    </ul>
+                </section>            
             </main>
 
         <a class="btn block_center" href="../index.html">Retour</a>
