--- a/css/sass/Base/_base.scss
+++ b/css/sass/Base/_base.scss
@@ -36,6 +36,14 @@ ul{
     text-align: center;
 }
 
+.txt_left{
+    text-align: left;
+}
+
+.txt_right{
+    text-align: right;
+}
+
 .block_center{
     margin-left: auto;
     margin-right: auto;
@@ -43,6 +51,10 @@ ul{
 
 .padding_top{
     padding-top: 50px;
+}
+
+.padding_bottom{
+    padding-bottom: 80px;
 }
 
 .padding-l-r{
@@ -66,14 +78,12 @@ ul{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap; 
-    margin-top: 30px;
 }
 
-
-@media ( min-width : 768px ) {  
-
-    
+.img-orientation{
+    transform: scaleX(-1);
 }
+
 
  
 
@@ -82,12 +92,28 @@ ul{
         font-size: 6rem;
     }
 
-    h4{
-        font-size: 4rem;
+      
+
+    li{
+        width: 40vw;        
+    }
+
+    p{
+        margin:0;
+        padding:0;
     }
 
     .flexbox{  
         display: flex;      
         flex-wrap: nowrap;        
     }
+
+    .size_title{
+        &_menu1{
+            font-size: 5rem; 
+        }
+        &_menu2{
+            font-size: 2.3rem;
+        }
+    }  
 }
