--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -19,7 +19,6 @@
         <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
             
     </head>
-
     <body>        
         <header class="header_top">
             <a href="../index.html">
@@ -27,7 +26,7 @@
             </a>        
         </header> 
         <h2>La note enchantée</h2> 
-        <main class="block_center width_menu color_menu--bg1  style_menu1"> 
+        <main class="block_center width_menu color_menu--bg1  style_menu1 padding_bottom"> 
             <div class="txt_center padding_top">
                 <i class="note--color note--top fas fa-music"></i>
             </div> 
@@ -37,11 +36,11 @@
                     <header class="flexbox block_center">
                         <div class="flex_center">
                             <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
-                            <h3 class="hvr-underline-from-left">Prélude</h3>
+                            <h4 class="size_title_menu1 hvr-underline-from-left">Prélude</h4>
                             <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
                         </div>
                     </header>
-                    <ul class="flex_column">
+                    <ul class="flex_column flex_center">
                         <li class="flex_space-between">
                             <p>Ravioles de foie gras accompagnés de leur crème</p>
                             <p>98€</p>
@@ -64,11 +63,11 @@
                     <header class="flexbox block_center">
                         <div class="flex_center">
                             <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
-                            <h3 class="hvr-underline-from-left">Point d'orgue</h3>
+                            <h4 class="size_title_menu1 hvr-underline-from-left">Point d'orgue</h4>
                             <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
                         </div>
                     </header>
-                    <ul class="flex_column">
+                    <ul class="flex_column flex_center">
                         <li class="flex_space-between">
                             <p>Noix de coquilles Saint-Jacques sur lit de purée de céléri-rave</p>
                             <p>102€</p>
@@ -87,16 +86,16 @@
                     <header class="flexbox block_center">
                         <div class="flex_center">
                             <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
-                            <h3 class="hvr-underline-from-left">Mouvement final</h3>
+                            <h4 class="size_title_menu1 hvr-underline-from-left">Mouvement final</h4>
                             <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
                         </div>
                     </header>
-                    <ul class="flex_column">
+                    <ul class="flex_column flex_center">
                         <li class="flex_space-between">
                             <p class="padding_left">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
                         </li>
                         <li class="flex_space-between">
-                            <p class="padding_left">Baba au rhim revisité avec son coulis de citron</p>
+                            <p class="padding_left">Baba au rhum revisité avec son coulis de citron</p>
                         </li>                                
                         <li class="flex_space-between">
                             <p class="padding_left">Tarte au citron meringuée destructurée</p>
