--- a/view/menu_2b.html
+++ b/view/menu_2b.html
@@ -26,18 +26,18 @@
             </a>        
         </header>
         <h2>Le chic à la française</h2>
-        <main class="block_center width_menu color_menu--bg2 style_menu2">  
+        <main class="block_center width_menu color_menu--bg2 style_menu2 padding_bottom">  
             <article>
-                <h3 class="margin_null padding_top">Le chic à la française</h3>
+                <h3 class="style_title-two margin_null padding_top">Le chic à la française</h3>
                 <section class="block_center style_menu2--a">
                     <header class="flexbox block_center">
                         <div class="flex_center">
                             <img class="bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
-                            <h3 class="hvr-underline-from-left">Pour se mettre en appétit</h3>
+                            <h4 class="hvr-underline-from-left">Pour se mettre en appétit</h4>
                             <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
                         </div>
                     </header>
-                    <ul class="flex_column">
+                    <ul class="flex_column flex_center">
                         <li class="flex_space-between">
                             <p>Tartare de poulpe acidulé aux zests d'orange</p>
                             <p>79€</p>
@@ -47,19 +47,20 @@
                             <p>57€</p>
                         </li>
                         <li class="flex_space-between">
-                        <p>Soupe à l"oignon revisitée</p>
-                        <p>57€</p>
+                            <p>Soupe à l"oignon revisitée</p>
+                            <p>57€</p>
+                        </li>
                     </ul>          
                 </section>      
                 <section class="block_center style_menu2--b">
                     <header class="flexbox block_center">
                         <div class="flex_center">
                             <img class="bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
-                            <h3 class="hvr-underline-from-left">Plaisir des papilles</h3>
+                            <h4 class="hvr-underline-from-left">Plaisir des papilles</h4>
                             <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
                         </div>
                     </header>
-                    <ul class="flex_column">
+                    <ul class="flex_column flex_center">
                         <li class="flex_space-between">
                             <p>Coquilles Saint-Jacques accompagnées d'une purée de panais</p>
                             <p>95€</p>
@@ -78,11 +79,11 @@
                     <header class="flexbox block_center">
                         <div class="flex_center">
                             <img class="bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
-                            <h3 class="hvr-underline-from-left">Gourmandises sucrées</h3>
+                            <h4 class="hvr-underline-from-left">Gourmandises sucrées</h4>
                             <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
                         </div>
                     </header>
-                    <ul class="flex_column">
+                    <ul class="flex_column flex_center">
                         <li class="flex_space-between">
                             <p class="padding_left">Pétales de violettes glacés et purée de noisettes</p>
                         </li>
